--- a/index.hbs
+++ b/index.hbs
@@ -2,15 +2,28 @@
 title: Log in
 css:
 - login.css
+- input.css
+- btn.css
 ---
+
 {{!< base}} <div class="outerBlock">
     <div class="enterBlock">
         <h2>Log in</h2>
-        <div>
-            <input name="login" />
+        <div class="inputsBlock">
+            <div class="loginBlock">
+                {{> input name="login" label="Login" type="text"}}
+            </div>
+            <div class="loginBlock">
+                {{> input name="password" label="Password" type="password"}}
+            </div>
         </div>
+
         <div>
-            <input name="password" type="password" />
+            {{> button text="Enter"}}
+        </div>
+        <div class="linkBlock">
+            <a href="./src/pages/registration.hbs">Don't have account yet?</a>
         </div>
     </div>
+
     </div>
