--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,12 +1,12 @@
 
 .login__box {
   position: relative;
-  width: 260px;
+  width: 90%;
   margin: 0 auto;
   & input{
     width: 100%;
     padding: 10px 0;
-    font-size: 16px;
+    font-size: 18px;
     border: none;
     border-bottom: 2px solid #00A523;
     outline: none;
@@ -16,7 +16,7 @@
         top: -20px;
         left: 0;
         color: #00A523;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 700;
     }
   }
@@ -25,7 +25,7 @@
       top:0;
       left: 0;
       padding: 10px 0;
-      font-size: 14px;
+      font-size: 16px;
       color: #c6c6c6;
       pointer-events: none;
       transition: .5s;
