--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,43 +1,34 @@
-.enterBlock {
-    padding: 24px;
-    width: 28%;
-    margin: 0;
-    text-align: center;
-    box-shadow: 0px 0px 6px rgb(0 0 0 / 14%);
-    border-radius: 12px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-}
-
-body {
-    margin: 0;
-    height: 100vh;
-}
-
-a {
-    color: #00A523;
-    text-decoration: none;
-    &:hover {
-        text-decoration: underline;
+.block{
+    &__enter{
+        padding: 24px;
+        width: 33%;
+        margin: 0;
+        text-align: center;
+        box-shadow: 0px 0px 6px rgb(0 0 0 / 14%);
+        border-radius: 12px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
-}
+    
+    &__outer{
+        height: 100vh;
+        position: relative;
+    }
 
-.outerBlock {
-    height: 100vh;
-    position: relative;
-}
+    &__login{
+        margin-bottom: 20px;
+    }
 
-.loginBlock {
-    margin-bottom: 20px;
-}
+    &__inputs{
+        margin-bottom: 108px;
+        &-signUp{
+            margin-bottom: 48px;
+        }
+    }
 
-.inputsBlock {
-    margin-bottom: 108px;
-}
-
-.linkBlock {
-    padding: 12px 0;
+    &__link{
+        padding: 12px 0;
+    }
 }
