--- a/src/layouts/auth.hbs
+++ b/src/layouts/auth.hbs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/login.css">
     {{#each css}}
     <link rel="stylesheet" href="../css/{{this}}">
     {{/each}}
@@ -13,7 +14,13 @@
 </head>
 
 <body>
-    {{{body}}}
+    <div class="block__outer">
+        <div class="block__enter">
+            <h2>{{formTitle}}</h2>
+            {{{body}}}
+        </div>
+    
+    </div>
 </body>
 
 </html>
