chat page is done

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -16,6 +16,7 @@ css:
     </div>
 
     <div>
+        <div><a href="chat.hbs">Enter</a></div>
         {{> button text="Enter"}}
     </div>
     <div class="block__link">
