--- a/src/pages/registration.hbs
+++ b/src/pages/registration.hbs
@@ -34,5 +34,5 @@ css:
         {{> button text="Create profile"}}
     </div>
     <div class="block__link">
-        <a href="registration.hbs">Don't have account yet?</a>
+        <a href="index.hbs">Enter</a>
     </div>
