--- a/src/pages/chat.hbs
+++ b/src/pages/chat.hbs
@@ -8,7 +8,7 @@ css:
     <div class="block__chats">
         <div class="searchProfileBlock">
             <div class="block__link">
-                <a href="profile.hbs" class="greyLink">Profile ></a>
+                <a href="profileInfo.hbs" class="greyLink">Profile ></a>
             </div>
             <div class="block__search">
                 <input class="searchInput" placeholder="Search..." name="search" type="text" />
