--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -16,8 +16,10 @@ css:
     </div>
 
     <div>
-        <div><a href="chat.hbs">Enter</a></div>
-        {{> button text="Enter"}}
+        <a href="page404.hbs">404</a>
+        <a href="chat.hbs">
+            {{> button text="Enter"}}
+        </a>
     </div>
     <div class="block__link">
         <a href="registration.hbs">Create account</a>
