--- a/src/css/btn.css
+++ b/src/css/btn.css
@@ -2,10 +2,11 @@
     border: 2px solid #00A523;
     background-color: white;
     color: #00A523;
-    padding: 4px 28px;
+    padding: 8px 28px;
     font-size: 16px;
     cursor: pointer;
     border-radius: 8px;
+    min-width: 280px;
 
     &:hover {
         background-color: #00A523;
