--- a/src/layouts/profile.hbs
+++ b/src/layouts/profile.hbs
@@ -16,7 +16,10 @@
 <body>
     <div class="outer">
         <div class="circle">
-            <div class="circle__text">Change avatar</div>
+            <div class="circle__text">
+                <label for="avatar">Change avatar</label>
+                <input type="file" name="avatar" id="avatar">
+            </div>
         </div>
         {{{body}}}
     </div>
