--- a/src/css/pa.css
+++ b/src/css/pa.css
@@ -41,9 +41,29 @@
         align-items: center;
         justify-content: center;
         opacity: 0;
+        position: relative;
 
         &:hover {
             opacity: 1;
+        }
+
+        & > input[type=file]{
+            z-index: -1;
+            opacity: 0;
+            position: absolute;
+            width: 0;
+        }
+
+        & > label {
+            cursor: pointer;
+            z-index: 1;
+            color: #fff;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
